font weight + previous/next fixed

--- a/src/plakater.html
+++ b/src/plakater.html
@@ -361,7 +361,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Morgenfrost</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Morgenfrost</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Pieter MacLaine</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -374,7 +374,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Frankrig</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Frankrig</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Guillaume Raoux</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -387,7 +387,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Ørestad</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Ørestad</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Steffi Graf</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 99,-</p>
                     </div>
@@ -400,7 +400,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Højbanen</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Højbanen</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Varte Meo</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -413,7 +413,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Højt på en gren</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Højt på en gren</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Edgar Poe</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299,-</p>
                     </div>
@@ -426,7 +426,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Irland</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Irland</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Peter McLean</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -439,7 +439,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Sverige</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Sverige</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Göran Svensson</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -452,7 +452,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Keep it simple</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Keep it simple</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Andyax</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -465,7 +465,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Belgien</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Belgien</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Magritte</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299,-</p>
                     </div>
@@ -478,7 +478,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Holbæk</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Holbæk</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -491,7 +491,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">De polske alper</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">De polske alper</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Milla Jankovic</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -504,7 +504,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Vestenvind</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Vestenvind</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Turid Dagstad</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -517,7 +517,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Farvestik</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Farvestik</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Peter McLean</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -530,7 +530,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Pink</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Pink</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Chong Wang</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -543,7 +543,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Ørken</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Ørken</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Jill Meyers</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -556,7 +556,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Semi-invers</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Semi-invers</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Roger Christensen</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -569,7 +569,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Himmelbjerget</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Himmelbjerget</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 99,-</p>
                     </div>
@@ -582,7 +582,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Vesterhavet</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Vesterhavet</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -595,7 +595,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Fugleflugt</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Fugleflugt</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Søren Mørkberg</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -608,7 +608,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Golden Gate</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Golden Gate</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Jill Meyers</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 249,-</p>
                     </div>
@@ -621,7 +621,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">På vej til Grisefest</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">På vej til Grisefest</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -634,7 +634,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Skotland</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Skotland</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Peter McLean</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -647,7 +647,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Færøerne</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Færøerne</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Turid Dagstad</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -660,7 +660,7 @@
                         </div>
                     </a>
                     <div>
-                        <h2 class="text-xl text-gray-600 mt-4">Færøerne II</h2>
+                        <h2 class="text-xl font-medium text-gray-600 mt-4">Færøerne II</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Turid Dagstad</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
@@ -668,10 +668,10 @@
             </div>
 
             <!-- previous/next -->
-            <div class="flex justify-center items-end mt-12">
+            <div class="flex justify-center mt-12">
                 <div class="flex flex-row items-center justify-center space-x-8">
                     <button
-                        class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
+                        class="text-base leading-none text-gray-800 font-bold border-b-2 border-transparent focus:outline-none focus:border-gray-800">
                         <p>1</p>
                     </button>
                     <button
