--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -461,31 +461,31 @@
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
-
-            <!-- previous/next -->
-            <div class="flex justify-center items-center mt-12">
-                <div class="flex flex-row items-center justify-center space-x-8">
-                    <button
-                        class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
-                        <p>1</p>
-                    </button>
-                    <button
-                        class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
-                        <p>2</p>
-                    </button>
-                    <button
-                        class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
-                        <p>3</p>
-                    </button>
-                    <button class="flex justify-center items-center">
-                        <img class="" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg4.svg"
-                            alt="next">
-                    </button>
-                </div>
-            </div>
-            <!-- previous/next slut -->
         </div>
+        <!-- previous/next -->
+        <div class="flex justify-center mt-12">
+            <div class="flex flex-row items-center justify-center space-x-8">
+                <button
+                    class="text-base leading-none text-gray-800 font-bold border-b-2 border-transparent focus:outline-none focus:border-gray-800">
+                    <p>1</p>
+                </button>
+                <button
+                    class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
+                    <p>2</p>
+                </button>
+                <button
+                    class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
+                    <p>3</p>
+                </button>
+                <button class="flex justify-center items-center">
+                    <img class="" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/product-grid-2-svg4.svg"
+                        alt="next">
+                </button>
+            </div>
+        </div>
+        <!-- previous/next slut -->
     </div>
+    
     <!-- Content slut-->
 
     <!-- Footer -->
