--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -557,8 +557,9 @@
                     <div class="text-white font-bold">
                         Lunefuld Lykke
                     </div>
-                    <p class="text-sm leading-none  mt-4 text-white">Copyright © 2022 Lunefuld Lykke</p>
+                    <p class="text-xs leading-none  mt-4 text-white">Copyright © 2022 Lunefuld Lykke</p>
                     <div class="flex items-center gap-x-4 mt-12">
+                        <!-- INSTAGRAM -->
                         <button aria-label="instagram"
                             class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 opacity-50 w-8 h-8 flex-shrink-0 bg-gray-800 cursor-pointer hover:bg-gray-700 rounded-full flex items-center justify-center">
                             <svg width="18" height="17" viewBox="0 0 18 17" fill="none"
@@ -568,6 +569,17 @@
                                     fill="white" />
                             </svg>
                         </button>
+                        <!-- FACEBOOK -->
+                        <button aria-label="facebook"
+                            class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 opacity-50 w-8 h-8 flex-shrink-0 bg-gray-800 cursor-pointer hover:bg-gray-700 rounded-full flex items-center justify-center">
+                            <svg width="21" height="20" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
+                                    fill="white" />
+                            </svg>
+                        </button>
+                        <!-- YOUTUBE -->
                         <button aria-label="youtube"
                             class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 opacity-50 w-8 h-8 flex-shrink-0 bg-gray-800 cursor-pointer hover:bg-gray-700 rounded-full flex items-center justify-center">
                             <svg width="18" height="13" viewBox="0 0 18 13" fill="none"
@@ -624,10 +636,10 @@
                 <label class="text-xl font-medium leading-5  text-white">Hold dig opdateret!</label>
                 <div class="flex items-center justify-between border  border-white mt-4 bg-white">
                     <input type="text"
-                        class="text-base leading-4 p-4 relative z-0 w-full focus:outline-none text-gray-800 placeholder-gray-800   border-white bg-white "
+                        class="text-base leading-4 p-4 relative z-0 w-full focus:outline-none text-gray-800 placeholder-gray-800 border-white bg-white "
                         placeholder="E-mail" />
                     <button aria-label="send"
-                        class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 cursor-pointer mr-4 cursor-pointer relative z-40">
+                        class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 mr-4 cursor-pointer relative z-40">
                         <svg class="fill-current text-gray-800 hover:text-gray-500  " width="16" height="17"
                             viewBox="0 0 16 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path
