--- a/src/inspiration.html
+++ b/src/inspiration.html
@@ -241,15 +241,19 @@
   <!-- Navigation slut -->
 
     <!-- Content -->
-    <div class="flex justify-center items-center">
-        <div class="2xl:mx-auto 2xl:container lg:px-20 lg:py-16 md:py-12 md:px-6 py-9 px-4 w-96 sm:w-auto">
-            <div role="main" class="flex flex-col items-center justify-center">
-                <h1 class="text-4xl font-semibold leading-9 text-center text-gray-800 ">Inspiration
+    <div class="2xl:container 2xl:mx-auto">
+        <div class="lg:px-20 md:px-6 px-4 md:py-12 py-8">
+            <div class="max-w-xs md:max-w-md lg:max-w-md mx-auto mb-10 lg:mb-14">
+                <h1 class="text-3xl lg:text-4xl font-semibold text-gray-800  text-center ">
+                    Inspiration
                 </h1>
-                <p class="text-base leading-normal text-center text-gray-600  mt-4 lg:w-1/2 md:w-10/12 w-11/12">
+                <p class="text-center pt-8">
                     Hvem laver de flotteste fotos og hvordan kan du pynte hjemmet med fotoplakater? Læs med her
-                    for at få lidt inspiration:-)</p>
+                    for at få lidt inspiration.
+                </p>
             </div>
+
+            <!-- Inspiration start -->
             <div class="lg:flex items-stretch md:mt-12 mt-8">
                 <div class="lg:w-1/2">
                     <div class="sm:flex items-center justify-between xl:gap-x-8 gap-x-6">
@@ -368,11 +372,13 @@
                     </div>
                 </div>
             </div>
+            <!-- inspiration end -->
+
             <!-- previous/next -->
-            <div class="flex justify-center items-end mt-12">
+            <div class="flex justify-center mt-12">
                 <div class="flex flex-row items-center justify-center space-x-8">
                     <button
-                        class="text-base leading-none text-gray-800  border-b-2 border-transparent focus:outline-none focus:border-gray-800">
+                        class="text-base leading-none text-gray-800 font-bold border-b-2 border-transparent focus:outline-none focus:border-gray-800">
                         <p>1</p>
                     </button>
                     <button
@@ -392,9 +398,9 @@
             <!-- previous/next slut -->
         </div>
     </div>
-
-
     <!-- Content slut-->
+
+
 
    <!-- Footer -->
   <footer class="bg-gray-800">
