--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -309,7 +309,13 @@
 
                     <div class="flex items-center justify-between p-6">
                         <button class="text-sm font-medium text-gray-600 underline" type="button">Fjern alle</button>
-                        <button class="px-2.5 py-1.5 font-medium text-white bg-black rounded-lg" type="submit">Vis resultater</button>
+                        <a class="relative inline-block px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="">
+                          <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
+                        
+                          <span class="relative text-sm font-medium text-black transition-colors group-hover:text-white">
+                            Vis resultater
+                          </span>
+                      </a>
                     </div>
                 </form>   
         
