--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,17 @@
     Footer
   -->
 
+  <!-- Trustpilot -->
+  <div class="px-5 py-3 text-white bg-black">
+      <div class="flex justify-center items-center flex-row gap-x-2">
+        <div class="bg-[#00B67B] p-0.5"><svg width="17" height="auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--simple-icons" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#ffffff" d="m17.227 16.67l2.19 6.742l-7.413-5.388l5.223-1.354zM24 9.31h-9.165L12.005.589l-2.84 8.723L0 9.3l7.422 5.397l-2.84 8.714l7.422-5.388l4.583-3.326L24 9.311z"></path></svg></div>
+        <div class="bg-[#00B67B] p-0.5"><svg width="17" height="auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--simple-icons" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#ffffff" d="m17.227 16.67l2.19 6.742l-7.413-5.388l5.223-1.354zM24 9.31h-9.165L12.005.589l-2.84 8.723L0 9.3l7.422 5.397l-2.84 8.714l7.422-5.388l4.583-3.326L24 9.311z"></path></svg></div>
+        <div class="bg-[#00B67B] p-0.5"><svg width="17" height="auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--simple-icons" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#ffffff" d="m17.227 16.67l2.19 6.742l-7.413-5.388l5.223-1.354zM24 9.31h-9.165L12.005.589l-2.84 8.723L0 9.3l7.422 5.397l-2.84 8.714l7.422-5.388l4.583-3.326L24 9.311z"></path></svg></div>
+        <div class="bg-[#00B67B] p-0.5"><svg width="17" height="auto" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--simple-icons" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#ffffff" d="m17.227 16.67l2.19 6.742l-7.413-5.388l5.223-1.354zM24 9.31h-9.165L12.005.589l-2.84 8.723L0 9.3l7.422 5.397l-2.84 8.714l7.422-5.388l4.583-3.326L24 9.311z"></path></svg></div>
+        <p class="ml-5 text-sm lg:text-base">4 stjerner på TrustPilot!</p>
+      </div>
+  </div>
+
   <!-- Navigation -->
   <div class="">
     <div>
