small index clean up

--- a/src/index.html
+++ b/src/index.html
@@ -637,7 +637,7 @@
       <!-- Posters end -->
     <!-- Content end -->
 
-    <!-- Footer -->
+    <!-- Footer start -->
     <footer class="bg-black">
       <div class="mx-auto container py-16 pb-7 xl:px-20 lg:px-12 sm:px-6 px-4">
           <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 md:gap-8 gap-4">
@@ -649,7 +649,7 @@
                     <img class="mt-10 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
                   </a>
                   <div class="flex items-center mt-10 gap-x-4">
-                      <!-- INSTAGRAM -->
+                      <!-- Instagram -->
                       <button aria-label="instagram"
                           class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
                           <svg width="25" height="auto" viewBox="0 0 18 17" fill="none"
@@ -659,7 +659,7 @@
                                   fill="white" />
                           </svg>
                       </button>
-                      <!-- FACEBOOK -->
+                      <!-- Facebook -->
                       <button aria-label="facebook"
                       class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
                           <svg width="27" height="auto" viewBox="0 0 24 24" fill="none"
@@ -669,7 +669,7 @@
                                   fill="white" />
                           </svg>
                       </button>
-                      <!-- YOUTUBE -->
+                      <!-- Youtube -->
                       <button aria-label="youtube"
                       class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
                           <svg width="25" height="auto" viewBox="0 0 18 13" fill="none"
@@ -744,7 +744,7 @@
           <p class="text-xs text-center mt-12 leading-none text-gray-200">Copyright © 2022 Lunefuld Lykke</p>
       </div>
   </footer>
-  <!-- Footer slut -->
+  <!-- Footer end -->
 
   <script type="module" src="index.js"></script>
   </body>
