--- a/src/index.html
+++ b/src/index.html
@@ -302,23 +302,23 @@
     <!-- Content start -->
       <!-- Books start -->
       <section>
-        <div class="max-w-screen-xl px-4 py-12 mx-auto sm:px-6 lg:px-8">
+        <div class="max-w-screen-xl px-4 py-12 mt-10 mx-auto sm:px-6 lg:px-8">
           <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 lg:items-stretch">
             <div class="flex items-center p-8 bg-gray-100">
               <div class="mx-auto text-center lg:text-left">
                 <h2 class="text-2xl font-bold">
-                  Vores litteratur
+                  Litteratur
                 </h2>
 
                 <p class="mt-4 text-lg text-gray-700 max-w-[45ch]">
-                  Til dig der gerne vil blive bedre til at tage bedre billeder.
+                  Til dig, der gerne vil blive bedre til at tage billeder.
                 </p>
 
                 <a class="relative inline-block mt-10 px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="litteratur.html">
                   <div class="inline-flex items-center">
                     <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
                     <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
-                      Se udvalget
+                      Se hele udvalget her
                     </span>
                     <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
                   </div>
@@ -416,7 +416,7 @@
             </h2>
 
             <p class="mt-4 text-lg text-gray-700">
-              Fotokunst der gør dit hjem endnu smukkere
+              Plakater, der gør dit hjem endnu smukkere.
             </p>
           </div>
 
@@ -427,7 +427,7 @@
                   href="/product/smart-watch"
                   class="block"
                 >
-                  <div>
+                  <div class="text-center">
                     <p class="text-xs text-indigo-500">
                       Banana
                     </p>
@@ -446,7 +446,97 @@
                     />
                   </div>
 
-                  <p class="mt-1 text-sm font-medium text-gray-700">
+                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
+                    $49.99
+                  </p>
+                </a>
+              </li>
+
+              <li class="swiper-slide">
+                <a
+                  href="/product/smart-watch"
+                  class="block"
+                >
+                  <div class="text-center">
+                    <p class="text-xs text-indigo-500">
+                      Banana
+                    </p>
+
+                    <h5 class="font-bold">
+                      Smart Watch
+                    </h5>
+                  </div>
+
+                  <div class="aspect-w-1 aspect-h-1">
+                    <img
+                      loading="lazy"
+                      alt="Smart Watch"
+                      class="object-cover"
+                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
+                    />
+                  </div>
+
+                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
+                    $49.99
+                  </p>
+                </a>
+              </li>
+
+              <li class="swiper-slide">
+                <a
+                  href="/product/smart-watch"
+                  class="block"
+                >
+                  <div class="text-center">
+                    <p class="text-xs text-indigo-500">
+                      Banana
+                    </p>
+
+                    <h5 class="font-bold">
+                      Smart Watch
+                    </h5>
+                  </div>
+
+                  <div class="aspect-w-1 aspect-h-1">
+                    <img
+                      loading="lazy"
+                      alt="Smart Watch"
+                      class="object-cover"
+                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
+                    />
+                  </div>
+
+                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
+                    $49.99
+                  </p>
+                </a>
+              </li>
+
+              <li class="swiper-slide">
+                <a
+                  href="/product/smart-watch"
+                  class="block"
+                >
+                  <div class="text-center">
+                    <p class="text-xs text-indigo-500">
+                      Banana
+                    </p>
+
+                    <h5 class="font-bold">
+                      Smart Watch
+                    </h5>
+                  </div>
+
+                  <div class="aspect-w-1 aspect-h-1">
+                    <img
+                      loading="lazy"
+                      alt="Smart Watch"
+                      class="object-cover"
+                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
+                    />
+                  </div>
+
+                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
                     $49.99
                   </p>
                 </a>
@@ -476,7 +566,7 @@
                     />
                   </div>
 
-                  <p class="mt-1 text-sm font-medium text-gray-700">
+                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
                     $49.99
                   </p>
                 </a>
@@ -506,97 +596,7 @@
                     />
                   </div>
 
-                  <p class="mt-1 text-sm font-medium text-gray-700">
-                    $49.99
-                  </p>
-                </a>
-              </li>
-
-              <li class="swiper-slide">
-                <a
-                  href="/product/smart-watch"
-                  class="block"
-                >
-                  <div>
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
-
-                    <h5 class="font-bold">
-                      Smart Watch
-                    </h5>
-                  </div>
-
-                  <div class="aspect-w-1 aspect-h-1">
-                    <img
-                      loading="lazy"
-                      alt="Smart Watch"
-                      class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
-                    />
-                  </div>
-
-                  <p class="mt-1 text-sm font-medium text-gray-700">
-                    $49.99
-                  </p>
-                </a>
-              </li>
-
-              <li class="swiper-slide">
-                <a
-                  href="/product/smart-watch"
-                  class="block"
-                >
-                  <div>
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
-
-                    <h5 class="font-bold">
-                      Smart Watch
-                    </h5>
-                  </div>
-
-                  <div class="aspect-w-1 aspect-h-1">
-                    <img
-                      loading="lazy"
-                      alt="Smart Watch"
-                      class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
-                    />
-                  </div>
-
-                  <p class="mt-1 text-sm font-medium text-gray-700">
-                    $49.99
-                  </p>
-                </a>
-              </li>
-
-              <li class="swiper-slide">
-                <a
-                  href="/product/smart-watch"
-                  class="block"
-                >
-                  <div>
-                    <p class="text-xs text-indigo-500">
-                      Banana
-                    </p>
-
-                    <h5 class="font-bold">
-                      Smart Watch
-                    </h5>
-                  </div>
-
-                  <div class="aspect-w-1 aspect-h-1">
-                    <img
-                      loading="lazy"
-                      alt="Smart Watch"
-                      class="object-cover"
-                      src="https://images.unsplash.com/photo-1546868871-7041f2a55e12"
-                    />
-                  </div>
-
-                  <p class="mt-1 text-sm font-medium text-gray-700">
+                  <p class="mt-1 text-base text-center lg:text-left font-medium text-gray-700">
                     $49.99
                   </p>
                 </a>
@@ -604,6 +604,17 @@
             </ul>
 
             <div class="mt-12 swiper-pagination"></div>
+            <div class="flex justify-center mb-10 w-auto">
+              <a class="relative inline-block mt-9 px-7 py-2.5 overflow-hidden border-2 border-black group focus:outline-none focus:ring" href="plakater.html">
+                <div class="inline-flex items-center">
+                  <span class="absolute inset-y-0 left-0 w-[2px] transition-all bg-black group-hover:w-full group-active:bg-black"></span>
+                  <span class="relative text-base font-medium text-black transition-colors group-hover:text-white">
+                    Se hele udvalget her
+                  </span>
+                  <svg class="w-7 h-auto ml-5 relative group-hover:fill-white group-active:fill-white" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--ic" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#fffff" d="M8.59 16.59L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.41z"></path></svg>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </section>
