--- a/src/plakater.html
+++ b/src/plakater.html
@@ -249,6 +249,7 @@
                 </h1>
                 <p class="text-center pt-8">
                     Her finder du vores store udvalg af flotte kunstplakater, klar til at komme op og hænge på din væg.
+                    Med plakater fra Lunefuld Lykke får hjemmet et nyt udtryk i løbet af en weekend!
                 </p>
             </div>
 
