bg-hero doesnt work

--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,7 @@
     <!-- Navigation end -->
 
     <!-- Hero start -->
-    <section class="bg-gray-500">
+    <section class="bg-hero bg-center bg-cover">
       <div class="max-w-screen-xl px-4 py-32 mx-auto lg:max-h-150 lg:items-center lg:flex">
         <div class="mx-auto text-center">
           <h1 class="text-3xl max-w-3xl font-extrabold sm:text-5xl">
