front page fixes

--- a/src/index.html
+++ b/src/index.html
@@ -262,9 +262,9 @@
     <!-- Navigation end -->
 
     <!-- Hero start -->
-    <section class="bg-hero bg-center bg-cover">
-      <div class="max-w-screen-xl px-4 py-32 mx-auto lg:max-h-150 lg:items-center lg:flex">
-        <div class="mx-auto text-center">
+    <section class="bg-hero bg-center">
+      <div class="max-w-screen-xl px-10 py-32 mx-auto lg:max-h-150 lg:items-center lg:flex">
+        <div class="mx-auto text-center p-10 lg:p-10 bg-white bg-opacity-70">
           <h1 class="text-3xl max-w-3xl font-extrabold sm:text-5xl">
             Velkommen til Lunefuld Lykke!
           </h1>
@@ -307,7 +307,7 @@
             <div class="flex items-center p-8 bg-gray-100">
               <div class="mx-auto text-center lg:text-left">
                 <h2 class="text-2xl font-bold">
-                  Litteratur
+                  Vores mest populære bøger
                 </h2>
 
                 <p class="mt-4 text-lg text-gray-700 max-w-[45ch]">
@@ -412,7 +412,7 @@
         <div class="max-w-screen-xl px-4 py-12 mx-auto sm:px-6 lg:px-8">
           <div class="text-center">
             <h2 class="text-2xl font-bold">
-              Plakater
+              De mest solgte plakater
             </h2>
 
             <p class="mt-4 text-lg text-gray-700">
@@ -420,7 +420,7 @@
             </p>
           </div>
 
-          <div class="mt-8 swiper">
+          <div class="mt-10 swiper">
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
                 <a
